<resources>
    <string name="app_name">TubeKing</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="unsubscribe_warning"><b>DO NOT <u>Unsubscribe</u></b> any channels or <b><u>Unlike</u></b> any videos we will <b>block</b> your account if you <u>unsubscribe  any channel or unlike any video</u></string>
    <string name="unlike_warning"><b>Do Not <u>Unlike</u></b> any videos we will <b>block</b> your account if you <u>unlike any video</u></string>
    <string name="vip_upgrade">Upgrade to VIP account to get more benefit. Tap here to get more information</string>
    <string name="campaign_message">Your campaign appear here. Click add button to create campaign to get subscribers for your channel</string>


    <string name="client_id" translatable="false">619144300144-r4ka9v2geld3100j0t1v16nilkljjgas.apps.googleusercontent.com</string>
    <string name="defaultSenderId" translatable="false">619144300144</string>
    <string name="youtube_api_key" translatable="false">AIzaSyAZn8n7Q8QZwFPB0tGZsSsuBY8GOQffoKE</string>

    <string name="Interstial_ID">ca-app-pub-3940256099942544/1033173712</string>
    <string name="Banner_ID">ca-app-pub-3940256099942544/6300978111</string>
    <string name="Native_ID">ca-app-pub-3940256099942544/2247696110</string>
    <string name="Reward_ID">ca-app-pub-3940256099942544/5224354917</string>

    <string name="warning"><b>Warning:</b>\n\n - Do not create too many campaigns for one video, YT will not count many views from IP in very short time.\n- Video length must be at least 45 seconds.\n- YT needs 72 hours to update views from third party apps.\n\nSo please wait at least 72 hour to see your views updated on YT app. Use YT Studio to check view in real time.</string>
    <string name="month_subs">You will be charged $2.32 + tax automatically every month until you cancel. Cancel anytime in Subscription on Google Play.</string>
    <string name="year_subs">Billing starts at the end of 3 days free trial. You will be charges $5.89 + tax automatically every 3 months until you cancel. Cancel anytime in Subscription on Google Play.</string>
    <string name="pros_vip">- Remove ads.\n- Reduce 10% campaign cost.\n- Remove countdown timer after subscribed channel.\n-Campaign limit up-to 10.\n- Add 10 daily quotas in Subscriber and Like tabs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faq1"><![CDATA[First, You need to collect the coin by subscribe other channel or make a purchase. when enough coin, You can create campaign to promote your channel: in Campaign tab -> add button -> select your channel and make order number of subscriber you want]]></string>
    <string name="faq2"><![CDATA[Open YT app -> profile icon -> My Channel -> More button ->Share-> Copy link]]></string>
    <string name="faq3">No. As it is against YT terms and condition. All Subscriber is real user. It is very safe with your Channel</string>
    <string name="faq4">Sometime user subscribe your channel then unsubscribe or their account have been removed, so real subscriber maybe less than your order.</string>
    <string name="faq5">You can not do it. If other people subscribe then unsubscribe, real subscriber of your channel will be reduce. So we do not allow you unsubscribe the channel you subscribed on this app. If you unsubscribe your channel you subscribed on this app, We will block your account</string>
    <string name="faq6">If you subscribed this channel but can not get coin, please check if your account logged in this app and YT app is same or not.</string>

</resources>