<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".FaqActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@color/red"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="FAQ"
            app:titleTextColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="How to get more subscriber on TypeKing" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:textSize="15sp"
            android:text="@string/faq1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="12sp"
            android:background="@color/dark_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="How to get channel link" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:textSize="15sp"
            android:text="@string/faq2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="12sp"
            android:background="@color/dark_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Do TypeKing generate automatic subscriber? Is it safe for
your channel?" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:textSize="15sp"
            android:text="@string/faq3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="12sp"
            android:background="@color/dark_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Why real subscriber is not equal with order when create
campaign" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:textSize="15sp"
            android:text="@string/faq4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="12sp"
            android:background="@color/dark_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Can I unsubscribe the channel which I subscribe to earn
coin?" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:textSize="15sp"
            android:text="@string/faq5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="12sp"
            android:background="@color/dark_grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Why I subscribe the channel on YT app but cannot get coin
when back to this app." />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:textSize="15sp"
            android:text="@string/faq6" />

    </LinearLayout>



</androidx.core.widget.NestedScrollView>