<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lighterGrey"
    tools:context=".VIPActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        app:cardBackgroundColor="@color/red"
        app:cardElevation="6sp"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="12sp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/red"
                app:tint="@color/white"
                android:src="@drawable/round_arrow_back_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="VIP Account"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="12sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/coin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/round_monetization_on_24"
                    android:layout_gravity="center"
                    app:tint="@color/white"
                    android:layout_marginStart="6sp" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12sp"
        app:cardCornerRadius="8sp"
        app:cardElevation="6sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12sp"
            android:textColor="@color/dark_grey"
            android:textStyle="bold"
            android:text="@string/pros_vip"
            android:textSize="24sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/monthSubscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12sp"
        app:cardCornerRadius="8sp"
        app:cardElevation="6sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12sp">

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A MONTH"
                android:textSize="20sp"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rs 650.00"
                android:textSize="20sp"
                android:layout_alignParentRight="true"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/month_subs"
                android:textSize="14sp"
                android:layout_below="@id/duration" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/YearSubscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12sp"
        app:cardCornerRadius="8sp"
        app:cardElevation="6sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12sp">

            <TextView
                android:id="@+id/durationY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3 MONTHS"
                android:textSize="20sp"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/trial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3 days free trial"
                android:layout_below="@id/durationY"
                android:layout_marginTop="5sp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/priceY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rs 1650.00"
                android:textSize="20sp"
                android:layout_alignParentRight="true"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/messageY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/year_subs"
                android:textSize="14sp"
                android:layout_below="@id/trial" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12sp"
        app:cardCornerRadius="8sp"
        app:cardElevation="6sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:gravity="center"
                android:textColor="@color/dark_grey"
                android:text="Manage subscription on Google Play" />

            <Button
                android:id="@+id/googlePlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12sp"
                android:layout_marginTop="6sp"
                android:text="Google Play Subscription" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>